<resources>
    <string name="app_name">RVSPReader</string>
    <string name="schema_reset_notice">Your saved bookmarks and documents were reset during this update due to a database schema change. Future updates will preserve your data.</string>
    <string name="schema_reset_dismiss">OK</string>
    <string name="restart_paragraph">Restart ¶</string>
    <string name="reading_speed">Reading Speed</string>
    <string name="wpm_format">%d WPM</string>
    <string name="import_text">Import Text</string>
    <string name="importing_document">Importing document...</string>
    <string name="processing_pdf">Processing PDF file...</string>
    <string name="processing_epub">Processing EPUB file...</string>
    <string name="processing_text">Processing text file...</string>
    <string name="analyzing_text">Analyzing text content...</string>
    <string name="import_complete">Import complete!</string>
    <string name="import_failed">Import failed</string>
    <string name="paste_from_clipboard">Paste from Clipboard</string>
    <string name="enter_text_manually">Enter Text Manually</string>
    <string name="enter_text">Enter Text</string>
    <string name="enter_text_hint">Enter text to read...</string>
    <string name="load">Load</string>
    <string name="cancel">Cancel</string>
    <string name="import_from_file">Import from File</string>
    <string name="select_file">Select File</string>
    <string name="loading_file">Loading file...</string>
    <string name="file_parse_error">Error reading file</string>
    <string name="file_parse_success">File loaded successfully</string>
    <string name="import_from_url">Import from URL</string>
    <string name="enter_url">Enter URL</string>
    <string name="enter_url_hint">https://example.com/article</string>
    <string name="url_invalid_scheme">Please use an http:// or https:// URL.</string>
    <string name="bookmark">Bookmark</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="save_bookmark">Save Bookmark</string>
    <string name="bookmark_saved">Bookmark saved</string>
    <string name="bookmark_title_hint">Bookmark title</string>
    <string name="jump_to_bookmark">Jump to position</string>
    <string name="delete_bookmark">Delete bookmark</string>
    <string name="no_bookmarks">No bookmarks yet</string>
    <string name="auto_bookmark">Auto-saved</string>
    <string name="progress_format">%d%%</string>
    <string name="save_document">Save Document</string>
    <string name="saved_documents">Saved Documents</string>
    <string name="document_saved">Document saved to library</string>
    <string name="document_already_saved">Document already in library</string>
    <string name="document_title_hint">Document title</string>
    <string name="no_saved_documents">No saved documents yet</string>
    <string name="reload_document">Reload document</string>
    <string name="delete_document">Delete document</string>
    <string name="favorite">Favorite</string>
    <string name="unfavorite">Remove from favorites</string>
    <string name="add_tags">Add tags</string>
    <string name="tags_hint">Enter tags separated by commas</string>
    <string name="load_document">Load document</string>
    <string name="document_info">Document Info</string>
    <string name="word_count_format">%d words</string>
    <string name="file_size_format">%.1f KB</string>
    <string name="position_scrubber">Position scrubber</string>
    <string name="reading_wpm_slider_cd">Reading speed slider</string>
    <string name="reading_progress_format">%d%% complete</string>
    <string name="resume_reading">Resume reading</string>
    <string name="page_counter_format">%1$d/%2$d</string>
    <string name="page_counter_empty">0/0</string>
    <string name="page_counter_description">Page counter</string>
    <string name="jump_to_page">Jump to Page</string>
    <string name="jump">Jump</string>
    <string name="page_jump_hint">Enter page number (1-%d)</string>
    <string name="current_page_info">Current: Page %1$d of %2$d</string>
    <string name="single_page_document">Document has only one page</string>
    <string name="invalid_page_number">Please enter a valid page number (1-%d)</string>
    <string name="invalid_page_input">Invalid page number</string>
    <string name="tab_reading">Reading</string>
    <string name="tab_library">Library</string>
    <string name="tab_options">Options</string>
    <string name="library_title">My Library</string>
    <string name="quick_actions">Quick Actions</string>
    <string name="open_documents_folder">Import Documents</string>
    <string name="refresh_library">Refresh</string>
    <string name="documents_folder">Documents Folder</string>
    <string name="empty_library_message">No saved documents yet.\nImport and save documents to see them here.</string>
    <string name="empty_folder_message">No files found in documents folder.\nAdd PDF, EPUB, or TXT files to import them.</string>
    <string name="folder_access_error">Unable to access documents folder</string>
    <string name="import_from_folder">Import from folder</string>
    <string name="options_title">Reading Options</string>
    <string name="user_manual_button_label">User Manual</string>
    <string name="user_manual_dialog_title">User Manual</string>
    <string name="user_manual_close_button">Got it</string>
    <string name="page_view_appearance_settings">Page View Appearance</string>
    <string name="page_view_font_size_label">Page View Font Size</string>
    <string name="page_view_color_theme_label">Page View Color Theme</string>
    <string name="page_view_scroll_mode_label">Scroll Mode</string>
    <string name="page_view_scroll_mode_continuous">Continuous</string>
    <string name="page_view_scroll_mode_paged">Paged</string>
    <string name="voice_catalog_title">Piper voice catalog</string>
    <string name="voice_catalog_empty">No voices found. Pull down to refresh.</string>
    <string name="voice_catalog_retry">Retry</string>
    <string name="voice_catalog_search_hint">Search voices</string>
    <string name="page_view_listen">Listen</string>
    <string name="page_view_scroll_to_highlight">Scroll to highlighted word</string>
</resources>